added new section

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             pariatur, reprehenderit sapiente eveniet excepturi atque, sequi autem sint error perferendis? Vel provident
             ad consectetur! Accusantium.</p>
     </main>
+    <section>
+        <h1>Heading 2</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita perferendis nemo dolorem iusto dicta id, at qui consectetur magni culpa. Dolore dolorem distinctio libero rem, reprehenderit fugit facere ex deserunt.</p>
+    </section>
 </body>
 
 </html>
